[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "redis-data-structures"
version = "0.1.17"
description = "Redis-backed data structures for building scalable and resilient applications"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Duy V. Huynh", email = "vndee.huynh@gmail.com"},
]
keywords = ["redis", "data-structures", "queue", "stack", "priority-queue", "set", "hash-map", "deque", "bloom-filter", "graph", "lru-cache", "ring-buffer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
dependencies = [
    "backoff>=2.2.1",
    "orjson>=3.10.12",
    "redis>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/vndee/redis-data-structures"
Repository = "https://github.com/vndee/redis-data-structures"
Documentation = "https://github.com/vndee/redis-data-structures#readme"

[dependency-groups]
dev = [
    "mmh3>=5.0.1",
    "pre-commit>=2.21.0",
    "pydantic>=2.5.3",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.4",
]

[tool.black]
line-length = 100
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
    "examples/.*",
    "tests/.*",
]
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 100
target-version = "py37"
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "N", "W", "D", "S", "BLE", "FBT", "A", "COM", "C90", "T10", "ICN", "Q", "RET", "SIM", "TID", "ARG", "DTZ", "ERA", "PD", "PGH", "PIE", "PL", "PT", "RSE", "RUF", "SLF", "TCH", "TRY"]
ignore = ["D100", "D104", "PLR2004", "BLE001", "TRY300", "D103", "PT009", "PLW2901", "FBT001", "FBT002", "PLR", "TRY003", "FBT003"]  # Ignore missing docstrings and magic numbers

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D100", "D101", "D102", "D103"]  # Allow assert statements and missing docstrings in tests
